# ros2_moveit_ur_demo

./: .clang-format  .gitignore  CMakeLists.txt  DOCKER.md  README.md  docker-compose.linux.yml  docker-compose.yml  Øving5.md
doc/: DOCKER.md  ROBOSTACK.md
docker_files/: Dockerfile.ros2_dev  cyclonedds.xml  cyclonedds_dev.xml  cyclonedds_driver.xml  dev_entrypoint.sh  driver_entrypoint.sh
src/fake_controller/: CMakeLists.txt  fake_controller.cpp  package.xml
src/joint_commander/: package.xml  setup.cfg  setup.py
src/joint_commander/joint_commander/: action_commander.py  topic_commander.py
src/kine/: CMakeLists.txt  kine_environment.cpp  package.xml
src/kine/include/: KineEnvironment.hpp  TrajectoryAnimator.hpp
src/kine/include/kine/: EETrail.hpp  KineEnvironment.hpp  TransformKeyListener.hpp
src/kine/src/: EETrail.hpp  KineEnvironment.cpp  KineEnvironment.hpp  KineUI.hpp  TrajectoryAnimator.cpp  TrajectoryAnimator.hpp  TransformKeyListener.hpp  kine_main.cpp
src/simulated_controller/: CMakeLists.txt  package.xml  simulated_controller.cpp
src/target_planner/: CMakeLists.txt  package.xml  target_planner.cpp
src/target_planner/action/: Execute.action  Plan.action  PlanAndExecute.action
src/ur_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur_bringup/config/: moveit_controllers.yaml  moveit_controllers2.yaml  ros2_controllers.yaml  ros2control_moveit_controllers.yaml
src/ur_bringup/launch/: action_commander.launch.py  display_robot.launch.py  display_robot_rviz.launch.py  fake_controller_stack.launch.py  move_robot.launch.py  move_robot_ros2control.launch.py  move_robot_rviz.launch.py  sim_controller_stack.launch.py  topic_commander.launch.py
src/ur_bringup/ur_bringup/: launch_utils.py
