cmake_minimum_required(VERSION 3.24)
project(target_planner)

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)

add_executable(target_planner target_planner.cpp)
ament_target_dependencies(target_planner rclcpp std_msgs geometry_msgs moveit_ros_planning_interface)

install(TARGETS
        target_planner
        DESTINATION lib/${PROJECT_NAME}
)

ament_package()
