<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>ur_bringup</name>
    <version>0.0.1</version>
    <description>UR demo</description>

    <maintainer email="laht@ntnu.no">Lars Ivar Hatledal</maintainer>

    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>ur_description</depend>
    <depend>ur_moveit_config</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>moveit_configs_utils</depend>
    <exec_depend>moveit_planners_ompl</exec_depend>
    <exec_depend>ur_robot_driver</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
